// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`the html structure of the dynamic logo, backend configured 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(-50%, 16%, 0);
    -moz-transform: translate3d(-50%, 16%, 0);
    -ms-transform: translate3d(-50%, 16%, 0);
    transform: translate3d(-50%, 16%, 0);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(-50%, 0, 0);
    -moz-transform: translate3d(-50%, 0, 0);
    -ms-transform: translate3d(-50%, 0, 0);
    transform: translate3d(-50%, 0, 0);
    opacity: 1;
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
    rotate: 0;
  }

  100% {
    -webkit-transform: translate3d(-120%, -27%, 0);
    -moz-transform: translate3d(-120%, -27%, 0);
    -ms-transform: translate3d(-120%, -27%, 0);
    transform: translate3d(-120%, -27%, 0);
    rotate: -40deg;
  }
}

@keyframes animation-2 {
  0% {
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
    rotate: 0;
  }

  100% {
    -webkit-transform: translate3d(-60%, 0, 0);
    -moz-transform: translate3d(-60%, 0, 0);
    -ms-transform: translate3d(-60%, 0, 0);
    transform: translate3d(-60%, 0, 0);
    rotate: -20deg;
  }
}

@keyframes animation-3 {
  0% {
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
  }

  100% {
    -webkit-transform: translate3d(0, 6%, 0);
    -moz-transform: translate3d(0, 6%, 0);
    -ms-transform: translate3d(0, 6%, 0);
    transform: translate3d(0, 6%, 0);
  }
}

@keyframes animation-4 {
  0% {
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
    rotate: 0;
  }

  100% {
    -webkit-transform: translate3d(60%, 0, 0);
    -moz-transform: translate3d(60%, 0, 0);
    -ms-transform: translate3d(60%, 0, 0);
    transform: translate3d(60%, 0, 0);
    rotate: 20deg;
  }
}

@keyframes animation-5 {
  0% {
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
    rotate: 0;
  }

  100% {
    -webkit-transform: translate3d(120%, -27%, 0);
    -moz-transform: translate3d(120%, -27%, 0);
    -ms-transform: translate3d(120%, -27%, 0);
    transform: translate3d(120%, -27%, 0);
    rotate: 40deg;
  }
}

.emotion-0 {
  position: relative;
  width: 85%;
  left: 7.5%;
  aspect-ratio: 1/1;
  background: linear-gradient(#4692f0, #183251);
  border-radius: 50%;
  box-shadow: 0 0 0 4px black,0 1rem 2rem rgba(0, 0, 0, 0.4);
}

.emotion-1 {
  position: absolute;
  font-weight: bold;
  top: 19.3548%;
  left: 50%;
  z-index: 10;
  -webkit-transform: translate3d(-50%, 0, 0);
  -moz-transform: translate3d(-50%, 0, 0);
  -ms-transform: translate3d(-50%, 0, 0);
  transform: translate3d(-50%, 0, 0);
  font-size: min(4em, 10vw);
  text-shadow: 0 4px 15px #000000;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: white;
}

.emotion-2 {
  width: 40%;
  height: 40%;
  position: absolute;
  left: 50%;
  -webkit-transform: translate3d(-50%, -16%, 0);
  -moz-transform: translate3d(-50%, -16%, 0);
  -ms-transform: translate3d(-50%, -16%, 0);
  transform: translate3d(-50%, -16%, 0);
  opacity: 0;
  -webkit-animation: animation-0 0.75s ease-out 0.01s forwards;
  animation: animation-0 0.75s ease-out 0.01s forwards;
}

.emotion-3 {
  position: absolute;
  height: 32.358%;
  width: 32.358%;
  left: 33.871%;
  top: 33.871%;
  transition-property: height,width,top,left,z-index;
  transition-duration: 0.15s;
  transition-timing-function: ease-in-out;
  z-index: 0;
  -webkit-animation: animation-1 1s ease-in-out 0.01s forwards;
  animation: animation-1 1s ease-in-out 0.01s forwards;
}

.emotion-3:hover {
  height: 40%;
  width: 40%;
  top: 20%;
  left: 30%;
  z-index: 20;
}

.emotion-4 {
  z-index: 0;
  background: #4e5d6c;
  border: solid 0px black;
}

.emotion-5 {
  z-index: 1;
  opacity: 1;
}

.emotion-5:hover {
  cursor: pointer;
}

.emotion-6 {
  position: absolute;
  height: 32.358%;
  width: 32.358%;
  left: 33.871%;
  top: 33.871%;
  transition-property: height,width,top,left,z-index;
  transition-duration: 0.15s;
  transition-timing-function: ease-in-out;
  z-index: 1;
  -webkit-animation: animation-2 1s ease-in-out 0.01s forwards;
  animation: animation-2 1s ease-in-out 0.01s forwards;
}

.emotion-6:hover {
  height: 40%;
  width: 40%;
  top: 20%;
  left: 30%;
  z-index: 20;
}

.emotion-9 {
  position: absolute;
  height: 32.358%;
  width: 32.358%;
  left: 33.871%;
  top: 33.871%;
  transition-property: height,width,top,left,z-index;
  transition-duration: 0.15s;
  transition-timing-function: ease-in-out;
  z-index: 2;
  -webkit-animation: animation-3 1s ease-in-out 0.01s forwards;
  animation: animation-3 1s ease-in-out 0.01s forwards;
}

.emotion-9:hover {
  height: 40%;
  width: 40%;
  top: 20%;
  left: 30%;
  z-index: 20;
}

.emotion-12 {
  position: absolute;
  height: 32.358%;
  width: 32.358%;
  left: 33.871%;
  top: 33.871%;
  transition-property: height,width,top,left,z-index;
  transition-duration: 0.15s;
  transition-timing-function: ease-in-out;
  z-index: 3;
  -webkit-animation: animation-4 1s ease-in-out 0.01s forwards;
  animation: animation-4 1s ease-in-out 0.01s forwards;
}

.emotion-12:hover {
  height: 40%;
  width: 40%;
  top: 20%;
  left: 30%;
  z-index: 20;
}

.emotion-15 {
  position: absolute;
  height: 32.358%;
  width: 32.358%;
  left: 33.871%;
  top: 33.871%;
  transition-property: height,width,top,left,z-index;
  transition-duration: 0.15s;
  transition-timing-function: ease-in-out;
  z-index: 4;
  -webkit-animation: animation-5 1s ease-in-out 0.01s forwards;
  animation: animation-5 1s ease-in-out 0.01s forwards;
}

.emotion-15:hover {
  height: 40%;
  width: 40%;
  top: 20%;
  left: 30%;
  z-index: 20;
}

<div
  class="justify-content-center row"
  data-testid="dynamic-logo"
>
  <div
    class="col-xl-6 col-lg-7 col-md-8 col-sm-12 col-12"
  >
    <div
      class="emotion-0"
    >
      <p
        class="className emotion-1"
      >
        Test Site
      </p>
      <div
        class="emotion-2"
      >
        <img
          alt="logo-arrow"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          src="/arrow.svg"
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
      </div>
      <div
        class="emotion-3"
      >
        <div
          class="rounded-lg shadow-lg ratio ratio-7x5 emotion-4"
        >
          <img
            alt="Card 6"
            class="card-img card-img-fade-in emotion-5"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src=""
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
      <div
        class="emotion-6"
      >
        <div
          class="rounded-lg shadow-lg ratio ratio-7x5 emotion-4"
        >
          <img
            alt="Card 1"
            class="card-img card-img-fade-in emotion-5"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src=""
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
      <div
        class="emotion-9"
      >
        <div
          class="rounded-lg shadow-lg ratio ratio-7x5 emotion-4"
        >
          <img
            alt="Card 2"
            class="card-img card-img-fade-in emotion-5"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src=""
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
      <div
        class="emotion-12"
      >
        <div
          class="rounded-lg shadow-lg ratio ratio-7x5 emotion-4"
        >
          <img
            alt="Card 3"
            class="card-img card-img-fade-in emotion-5"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src=""
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
      <div
        class="emotion-15"
      >
        <div
          class="rounded-lg shadow-lg ratio ratio-7x5 emotion-4"
        >
          <img
            alt="Card 4"
            class="card-img card-img-fade-in emotion-5"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            src=""
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`the html structure of the dynamic logo, no backend configured 1`] = `
@keyframes animation-0 {
  0% {
    -webkit-transform: translate3d(-50%, 16%, 0);
    -moz-transform: translate3d(-50%, 16%, 0);
    -ms-transform: translate3d(-50%, 16%, 0);
    transform: translate3d(-50%, 16%, 0);
    opacity: 0;
  }

  100% {
    -webkit-transform: translate3d(-50%, 0, 0);
    -moz-transform: translate3d(-50%, 0, 0);
    -ms-transform: translate3d(-50%, 0, 0);
    transform: translate3d(-50%, 0, 0);
    opacity: 1;
  }
}

@keyframes animation-1 {
  0% {
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
    rotate: 0;
  }

  100% {
    -webkit-transform: translate3d(-120%, -27%, 0);
    -moz-transform: translate3d(-120%, -27%, 0);
    -ms-transform: translate3d(-120%, -27%, 0);
    transform: translate3d(-120%, -27%, 0);
    rotate: -40deg;
  }
}

@keyframes animation-2 {
  0% {
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
    rotate: 0;
  }

  100% {
    -webkit-transform: translate3d(-60%, 0, 0);
    -moz-transform: translate3d(-60%, 0, 0);
    -ms-transform: translate3d(-60%, 0, 0);
    transform: translate3d(-60%, 0, 0);
    rotate: -20deg;
  }
}

@keyframes animation-3 {
  0% {
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
  }

  100% {
    -webkit-transform: translate3d(0, 6%, 0);
    -moz-transform: translate3d(0, 6%, 0);
    -ms-transform: translate3d(0, 6%, 0);
    transform: translate3d(0, 6%, 0);
  }
}

@keyframes animation-4 {
  0% {
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
    rotate: 0;
  }

  100% {
    -webkit-transform: translate3d(60%, 0, 0);
    -moz-transform: translate3d(60%, 0, 0);
    -ms-transform: translate3d(60%, 0, 0);
    transform: translate3d(60%, 0, 0);
    rotate: 20deg;
  }
}

@keyframes animation-5 {
  0% {
    -webkit-transform: translate3d(0, 0, 0);
    -moz-transform: translate3d(0, 0, 0);
    -ms-transform: translate3d(0, 0, 0);
    transform: translate3d(0, 0, 0);
    rotate: 0;
  }

  100% {
    -webkit-transform: translate3d(120%, -27%, 0);
    -moz-transform: translate3d(120%, -27%, 0);
    -ms-transform: translate3d(120%, -27%, 0);
    transform: translate3d(120%, -27%, 0);
    rotate: 40deg;
  }
}

.emotion-0 {
  position: relative;
  width: 85%;
  left: 7.5%;
  aspect-ratio: 1/1;
  background: linear-gradient(#4692f0, #183251);
  border-radius: 50%;
  box-shadow: 0 0 0 4px black,0 1rem 2rem rgba(0, 0, 0, 0.4);
}

.emotion-1 {
  position: absolute;
  font-weight: bold;
  top: 19.3548%;
  left: 50%;
  z-index: 10;
  -webkit-transform: translate3d(-50%, 0, 0);
  -moz-transform: translate3d(-50%, 0, 0);
  -ms-transform: translate3d(-50%, 0, 0);
  transform: translate3d(-50%, 0, 0);
  font-size: min(4em, 10vw);
  text-shadow: 0 4px 15px #000000;
  white-space: nowrap;
  -webkit-user-select: none;
  -moz-user-select: none;
  -ms-user-select: none;
  user-select: none;
  color: white;
}

.emotion-2 {
  width: 40%;
  height: 40%;
  position: absolute;
  left: 50%;
  -webkit-transform: translate3d(-50%, -16%, 0);
  -moz-transform: translate3d(-50%, -16%, 0);
  -ms-transform: translate3d(-50%, -16%, 0);
  transform: translate3d(-50%, -16%, 0);
  opacity: 0;
  -webkit-animation: animation-0 0.75s ease-out 0.01s forwards;
  animation: animation-0 0.75s ease-out 0.01s forwards;
}

.emotion-3 {
  position: absolute;
  height: 32.358%;
  width: 32.358%;
  left: 33.871%;
  top: 33.871%;
  transition-property: height,width,top,left,z-index;
  transition-duration: 0.15s;
  transition-timing-function: ease-in-out;
  z-index: 0;
  -webkit-animation: animation-1 1s ease-in-out 0.01s forwards;
  animation: animation-1 1s ease-in-out 0.01s forwards;
}

.emotion-3:hover {
  height: 40%;
  width: 40%;
  top: 20%;
  left: 30%;
  z-index: 20;
}

.emotion-4 {
  z-index: 0;
  background: #4e5d6c;
  border: solid 2px black;
}

.emotion-5 {
  width: 4em;
  height: 4em;
  z-index: 2;
}

.emotion-6 {
  z-index: 1;
  opacity: 0;
}

.emotion-6:hover {
  cursor: auto;
}

.emotion-7 {
  position: absolute;
  height: 32.358%;
  width: 32.358%;
  left: 33.871%;
  top: 33.871%;
  transition-property: height,width,top,left,z-index;
  transition-duration: 0.15s;
  transition-timing-function: ease-in-out;
  z-index: 1;
  -webkit-animation: animation-2 1s ease-in-out 0.01s forwards;
  animation: animation-2 1s ease-in-out 0.01s forwards;
}

.emotion-7:hover {
  height: 40%;
  width: 40%;
  top: 20%;
  left: 30%;
  z-index: 20;
}

.emotion-11 {
  position: absolute;
  height: 32.358%;
  width: 32.358%;
  left: 33.871%;
  top: 33.871%;
  transition-property: height,width,top,left,z-index;
  transition-duration: 0.15s;
  transition-timing-function: ease-in-out;
  z-index: 2;
  -webkit-animation: animation-3 1s ease-in-out 0.01s forwards;
  animation: animation-3 1s ease-in-out 0.01s forwards;
}

.emotion-11:hover {
  height: 40%;
  width: 40%;
  top: 20%;
  left: 30%;
  z-index: 20;
}

.emotion-15 {
  position: absolute;
  height: 32.358%;
  width: 32.358%;
  left: 33.871%;
  top: 33.871%;
  transition-property: height,width,top,left,z-index;
  transition-duration: 0.15s;
  transition-timing-function: ease-in-out;
  z-index: 3;
  -webkit-animation: animation-4 1s ease-in-out 0.01s forwards;
  animation: animation-4 1s ease-in-out 0.01s forwards;
}

.emotion-15:hover {
  height: 40%;
  width: 40%;
  top: 20%;
  left: 30%;
  z-index: 20;
}

.emotion-19 {
  position: absolute;
  height: 32.358%;
  width: 32.358%;
  left: 33.871%;
  top: 33.871%;
  transition-property: height,width,top,left,z-index;
  transition-duration: 0.15s;
  transition-timing-function: ease-in-out;
  z-index: 4;
  -webkit-animation: animation-5 1s ease-in-out 0.01s forwards;
  animation: animation-5 1s ease-in-out 0.01s forwards;
}

.emotion-19:hover {
  height: 40%;
  width: 40%;
  top: 20%;
  left: 30%;
  z-index: 20;
}

<div
  class="justify-content-center row"
  data-testid="dynamic-logo"
>
  <div
    class="col-xl-6 col-lg-7 col-md-8 col-sm-12 col-12"
  >
    <div
      class="emotion-0"
    >
      <p
        class="className emotion-1"
      >
        MPC Autofill
      </p>
      <div
        class="emotion-2"
      >
        <img
          alt="logo-arrow"
          data-nimg="fill"
          decoding="async"
          loading="lazy"
          src="/arrow.svg"
          style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
        />
      </div>
      <div
        class="emotion-3"
      >
        <div
          class="rounded-lg shadow-lg ratio ratio-7x5 emotion-4"
        >
          <div
            class="d-flex justify-content-center align-items-center"
          >
            <div
              class="spinner-border emotion-5"
              role="status"
              size="4"
            >
              <span
                class="visually-hidden"
              >
                Loading...
              </span>
            </div>
          </div>
          <img
            alt="Your Design Here"
            class="card-img card-img-fade-in emotion-6"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            sizes="100vw"
            src="/_next/image?url=%2Flogo-blank.png&w=3840&q=75"
            srcset="/_next/image?url=%2Flogo-blank.png&w=640&q=75 640w, /_next/image?url=%2Flogo-blank.png&w=750&q=75 750w, /_next/image?url=%2Flogo-blank.png&w=828&q=75 828w, /_next/image?url=%2Flogo-blank.png&w=1080&q=75 1080w, /_next/image?url=%2Flogo-blank.png&w=1200&q=75 1200w, /_next/image?url=%2Flogo-blank.png&w=1920&q=75 1920w, /_next/image?url=%2Flogo-blank.png&w=2048&q=75 2048w, /_next/image?url=%2Flogo-blank.png&w=3840&q=75 3840w"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
      <div
        class="emotion-7"
      >
        <div
          class="rounded-lg shadow-lg ratio ratio-7x5 emotion-4"
        >
          <div
            class="d-flex justify-content-center align-items-center"
          >
            <div
              class="spinner-border emotion-5"
              role="status"
              size="4"
            >
              <span
                class="visually-hidden"
              >
                Loading...
              </span>
            </div>
          </div>
          <img
            alt="Your Design Here"
            class="card-img card-img-fade-in emotion-6"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            sizes="100vw"
            src="/_next/image?url=%2Flogo-blank.png&w=3840&q=75"
            srcset="/_next/image?url=%2Flogo-blank.png&w=640&q=75 640w, /_next/image?url=%2Flogo-blank.png&w=750&q=75 750w, /_next/image?url=%2Flogo-blank.png&w=828&q=75 828w, /_next/image?url=%2Flogo-blank.png&w=1080&q=75 1080w, /_next/image?url=%2Flogo-blank.png&w=1200&q=75 1200w, /_next/image?url=%2Flogo-blank.png&w=1920&q=75 1920w, /_next/image?url=%2Flogo-blank.png&w=2048&q=75 2048w, /_next/image?url=%2Flogo-blank.png&w=3840&q=75 3840w"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
      <div
        class="emotion-11"
      >
        <div
          class="rounded-lg shadow-lg ratio ratio-7x5 emotion-4"
        >
          <div
            class="d-flex justify-content-center align-items-center"
          >
            <div
              class="spinner-border emotion-5"
              role="status"
              size="4"
            >
              <span
                class="visually-hidden"
              >
                Loading...
              </span>
            </div>
          </div>
          <img
            alt="Your Design Here"
            class="card-img card-img-fade-in emotion-6"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            sizes="100vw"
            src="/_next/image?url=%2Flogo-blank.png&w=3840&q=75"
            srcset="/_next/image?url=%2Flogo-blank.png&w=640&q=75 640w, /_next/image?url=%2Flogo-blank.png&w=750&q=75 750w, /_next/image?url=%2Flogo-blank.png&w=828&q=75 828w, /_next/image?url=%2Flogo-blank.png&w=1080&q=75 1080w, /_next/image?url=%2Flogo-blank.png&w=1200&q=75 1200w, /_next/image?url=%2Flogo-blank.png&w=1920&q=75 1920w, /_next/image?url=%2Flogo-blank.png&w=2048&q=75 2048w, /_next/image?url=%2Flogo-blank.png&w=3840&q=75 3840w"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
      <div
        class="emotion-15"
      >
        <div
          class="rounded-lg shadow-lg ratio ratio-7x5 emotion-4"
        >
          <div
            class="d-flex justify-content-center align-items-center"
          >
            <div
              class="spinner-border emotion-5"
              role="status"
              size="4"
            >
              <span
                class="visually-hidden"
              >
                Loading...
              </span>
            </div>
          </div>
          <img
            alt="Your Design Here"
            class="card-img card-img-fade-in emotion-6"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            sizes="100vw"
            src="/_next/image?url=%2Flogo-blank.png&w=3840&q=75"
            srcset="/_next/image?url=%2Flogo-blank.png&w=640&q=75 640w, /_next/image?url=%2Flogo-blank.png&w=750&q=75 750w, /_next/image?url=%2Flogo-blank.png&w=828&q=75 828w, /_next/image?url=%2Flogo-blank.png&w=1080&q=75 1080w, /_next/image?url=%2Flogo-blank.png&w=1200&q=75 1200w, /_next/image?url=%2Flogo-blank.png&w=1920&q=75 1920w, /_next/image?url=%2Flogo-blank.png&w=2048&q=75 2048w, /_next/image?url=%2Flogo-blank.png&w=3840&q=75 3840w"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
      <div
        class="emotion-19"
      >
        <div
          class="rounded-lg shadow-lg ratio ratio-7x5 emotion-4"
        >
          <div
            class="d-flex justify-content-center align-items-center"
          >
            <div
              class="spinner-border emotion-5"
              role="status"
              size="4"
            >
              <span
                class="visually-hidden"
              >
                Loading...
              </span>
            </div>
          </div>
          <img
            alt="Your Design Here"
            class="card-img card-img-fade-in emotion-6"
            data-nimg="fill"
            decoding="async"
            loading="lazy"
            sizes="100vw"
            src="/_next/image?url=%2Flogo-blank.png&w=3840&q=75"
            srcset="/_next/image?url=%2Flogo-blank.png&w=640&q=75 640w, /_next/image?url=%2Flogo-blank.png&w=750&q=75 750w, /_next/image?url=%2Flogo-blank.png&w=828&q=75 828w, /_next/image?url=%2Flogo-blank.png&w=1080&q=75 1080w, /_next/image?url=%2Flogo-blank.png&w=1200&q=75 1200w, /_next/image?url=%2Flogo-blank.png&w=1920&q=75 1920w, /_next/image?url=%2Flogo-blank.png&w=2048&q=75 2048w, /_next/image?url=%2Flogo-blank.png&w=3840&q=75 3840w"
            style="position: absolute; height: 100%; width: 100%; left: 0px; top: 0px; right: 0px; bottom: 0px; color: transparent;"
          />
        </div>
      </div>
    </div>
  </div>
</div>
`;
